# im_editor

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: Breakpoint.h  CMakeLists.txt  Coord.h  Cursor.h  Document.h  Editor.h  EditorWindow.h  Highlighter.h  LuaHighlighter.h  Misc.h  Palette.h  Undo.h  UndoBuffer.h  main.cpp
toolchains/: clang_arm.cmake  clang_arm64.cmake  gcc_arm.cmake  gcc_arm64.cmake
vcpkg_triplets/: armhf-linux-gcc.cmake
